# apm-python

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .whitesource  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  SECURITY.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  run_docker_dev.sh  setup.cfg  setup.py  tox.ini
.claude/: agents.md
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md  regular_bug_report.md
.github/actions/build_solarwinds_apm/: action.yaml
.github/actions/clean_builds_intermediates/: action.yaml
.github/actions/jira_vuln_k8s/: action.yaml
.github/actions/package_lambda_solarwinds_apm/: action.yaml
.github/actions/package_lambda_solarwinds_apm_aarch64/: action.yaml
.github/actions/package_lambda_solarwinds_apm_x86_64/: action.yaml
.github/actions/package_solarwinds_apm/: action.yaml
.github/agents/: python-security-vulnerability-agent.md
.github/instructions/: python.instructions.md
.github/scripts/: is_publishable.sh  release_pr.sh  testrelease_pr.sh
.github/templates/: jira-security-vuln.json
.github/utils/: app.py  client.py
.github/workflows/: build_aarch64.yaml  build_publish_image_autoinstrumentation.yaml  build_publish_image_autoinstrumentation_beta.yaml  build_publish_lambda_layer.yaml  build_publish_lambda_layer_aarch64.yaml  build_publish_lambda_layer_x86_64.yaml  build_publish_packagecloud.yaml  build_publish_pypi.yaml  build_publish_pypi_and_draft_release.yaml  build_publish_testpypi.yaml  build_sdist_and_wheel.yaml  build_x86_64.yaml  codeql_analysis.yml  create_release.yaml  create_release_pr.yaml  create_testrelease_pr.yaml  get_apm_python_version.yaml  publish_aarch64.yaml  publish_lambda_layer.yaml  publish_sdist_and_wheel.yaml  publish_x86_64.yaml  reversinglabs_scan.yaml  run_tox_lint_format.yaml  run_tox_ruff_format.yaml  run_tox_tests.yaml  test_verify_install_rhel8.yml  verify_install.yaml  verify_install_arm64.yaml  verify_install_macos.yaml  verify_install_windows.yaml
dev_tools/: Dockerfile  Makefile  run_docker_dev.sh
examples/aws_lambda_container/: Dockerfile  README.md  download-layer.sh  lambda_function.py
image/: Dockerfile  Dockerfile-beta  requirements-nodeps-beta.txt  requirements-nodeps.txt  requirements.txt
lambda/: README.md  check_lambda_modules.sh  otel_wrapper.py  requirements-custom.txt  requirements-lambda.txt  requirements-nodeps.txt  requirements-orm.txt  requirements-so.txt  requirements.txt  run.sh  template.yml
lambda/python/: .gitignore  requirements-nodeps.txt  requirements-testpypi.txt  requirements.txt
lambda/solarwinds-apm/: wrapper
lambda/tests/: requirements.txt  test_instrumentation.py
opentelemetry_distro_solarwinds/: MANIFEST.in  README.rst  __init__.py  configurator.py  distro.py  exporter.py  ot_ao_transformer.py  propagator.py  response_propagator.py  sampler.py  setup.cfg  setup.py  traceoptions.py  w3c_transformer.py
opentelemetry_distro_solarwinds/extension/: .gitignore  __init__.py  gen_bindings.sh
opentelemetry_distro_solarwinds/src/opentelemetry/distro/solarwinds/: __init__.py  version.py
opentelemetry_distro_solarwinds/tests/: test_w3c_transformer.py
scripts/: lint_and_format.py
solarwinds_apm/: __init__.py  apm_config.py  apm_configparser.py  apm_constants.py  apm_entry_span_manager.py  apm_fwkv_manager.py  apm_logging.py  apm_meter_manager.py  apm_noop.py  apm_oboe_codes.py  apm_ready.py  apm_resource.py  apm_transactionfilter.py  apm_txname_customizer.py  apm_txname_manager.py  apm_userconfig.py  configurator.py  distro.py  dummy.py  exporter.py  inbound_metrics_processor.py  k8s.py  otlp_metrics_processor.py  propagator.py  response_propagator.py  sampler.py  traceoptions.py  tracer_provider.py  uams.py  version.py  w3c_transformer.py
solarwinds_apm/api/: __init__.py
solarwinds_apm/certs/: ao_issuer_ca.py
solarwinds_apm/extension/: .gitignore  VERSION  __init__.py  gen_bindings.sh
solarwinds_apm/oboe/: __init__.py  backoff.py  configuration.py  dice.py  http_sampler.py  json_sampler.py  metrics.py  oboe_sampler.py  sampler.py  settings.py  token_bucket.py  trace_options.py  transaction_name_calculator.py  transaction_name_pool.py
solarwinds_apm/trace/: __init__.py  base_metrics_processor.py  batch_span_processor.py  entry_span_processor.py  forceflush_processor.py  inbound_metrics_processor.py  otlp_metrics_processor.py  response_time_processor.py  serviceentry_processor.py  tnames.py  txnname_calculator_processor.py  txnname_cleanup_processor.py
solarwinds_apm/util/: importlib_metadata.py
solarwinds_observability/: configurator.py  exporter.py  propagator.py  response_propagator.py  sampler.py  traceoptions.py  w3c_transformer.py
tests/: propagation_test_app.py  test_apm_config.py  test_apm_logging.py  test_apm_transactionfilter.py  test_distro.py  test_exporter.py  test_functional_header_propagation.py  test_functional_span_attributes.py  test_sampler.py  test_scenario_04.py  test_span_attributes.py  test_w3c_transformer.py
tests/functional/: test_functional_header_propagation.py  test_header_propagation.py  test_span_attributes.py
tests/integration/: propagation_test_app.py  propagation_test_app_v02.py  sw_distro_test.py  test-settings.json  test_base_sw.py  test_base_sw_headers_attrs.py  test_combined_v01.py  test_combined_v02.py  test_scenario_1.py  test_scenario_4.py  test_scenario_6.py  test_scenario_8.py  test_service_instance_id.py  test_service_name.py  test_signed_tt.py  test_span_attributes.py  test_unsigned_tt.py  test_xtraceoptions_validation.py
tests/unit/: test_api.py  test_apm_config.py  test_apm_logging.py  test_apm_meter_manager.py  test_apm_resource.py  test_distro.py  test_exporter.py  test_inbound_metrics_processor.py  test_k8s.py  test_propagator.py  test_response_propagator.py  test_sampler.py  test_sampler_calculate_attributes.py  test_span_attributes.py  test_tracer_provider.py  test_transaction_name_pool_api.py  test_uams.py  test_w3c_transformer.py  test_xtraceoptions.py
(+113 files in other folders)
