[metadata]
name = solarwinds_apm
version = attr: solarwinds_apm.version.__version__
author = SolarWinds, LLC
author_email = SWO-support@solarwinds.com
description = Custom distro for OpenTelemetry to connect to SolarWinds
long_description = file: README.md
long_description_content_type = text/markdown
keywords = solarwinds_apm appoptics_apm traceview tracelytics oboe liboboe instrumentation performance opentelemetry
license_files = (LICENSE,)
url = https://www.solarwinds.com/solarwinds-observability/use-cases/python-performance-monitoring
download_url = https://pypi.org/project/solarwinds-apm/
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology

[options]
python_requires = >=3.7
install_requires =
    opentelemetry-api == 1.21.0
    opentelemetry-sdk == 1.21.0
    opentelemetry-instrumentation == 0.42b0
    opentelemetry-instrumentation-logging == 0.42b0
packages = solarwinds_apm, solarwinds_apm.api, solarwinds_apm.certs, solarwinds_apm.extension

[options.package_data]
solarwinds_apm = extension/liboboe.so, extension/VERSION, extension/bson/bson.h, extension/bson/platform_hacks.h

[options.entry_points]
opentelemetry_distro =
    solarwinds_distro = solarwinds_apm.distro:SolarWindsDistro
opentelemetry_configurator =
    solarwinds_configurator = solarwinds_apm.configurator:SolarWindsConfigurator
opentelemetry_propagator =
    solarwinds_propagator = solarwinds_apm.propagator:SolarWindsPropagator
opentelemetry_traces_exporter =
    solarwinds_exporter = solarwinds_apm.exporter:SolarWindsSpanExporter
opentelemetry_traces_sampler = 
    solarwinds_sampler = solarwinds_apm.sampler:ParentBasedSwSampler
