[metadata]
name = opentelemetry_distro_solarwinds
description = Custom Layer for OpenTelemetry to connect to SolarWinds
long_description = file: README.rst
long_description_content_type = text/x-rst
author = SolarWinds
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Typing :: Typed

[options]
python_requires = >=3.6
package_dir=
    =src
packages=find_namespace:
zip_safe = False
include_package_data = True
install_requires =
    opentelemetry-api == 1.11.0
    opentelemetry-sdk == 1.11.0
    opentelemetry-instrumentation == 0.30b0

[options.packages.find]
where = src

[options.entry_points]
opentelemetry_distro =
    solarwinds_distro = opentelemetry_distro_solarwinds.distro:SolarWindsDistro
opentelemetry_configurator =
    solarwinds_configurator = opentelemetry_distro_solarwinds.configurator:SolarWindsConfigurator
opentelemetry_propagator =
    solarwinds_propagator = opentelemetry_distro_solarwinds.propagator:SolarWindsPropagator
opentelemetry_traces_exporter =
    solarwinds_exporter = opentelemetry_distro_solarwinds.exporter:SolarWindsSpanExporter
opentelemetry_traces_sampler = 
    solarwinds_sampler = opentelemetry_distro_solarwinds.sampler:ParentBasedSwSampler